<resources>
    <string name="app_name">Agronect</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Masuk</string>
    <string name="login_ask">Belum Mempunyai Akun?</string>
    <string name="signup_ask">Sudah Memiliki Akun?</string>
    <string name="Daftar">Daftar di sini</string>
    <string name="login_disini">Masuk di sini</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="next">Lanjut\n</string>
    <string name="logout">logout\n</string>
    <string name="upload">Unggah\n</string>
    <string name="description">deskripsi\n</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="fullname">Nama Lengkap\n</string>
    <string name="profil">Profil</string>
    <string name="simpan">Simpan</string>
    <string name="welcome">Selamat Datang</string>
    <string name="welcome_text"> Kami membantu Anda mendeteksi dan mencegah penyakit tanaman dengan cepat dan akurat. Mari ciptakan lingkungan hijau yang subur bersama!</string>
    <string name="success_login">Anda Berhasil Masuk</string>

</resources>